Prioritize paid partners on results page
